--- a/.github/workflows/context.yaml
+++ b/.github/workflows/context.yaml
@@ -13,7 +13,8 @@ jobs:
     steps:
     - name: echo github context
       run: |
-        echo "${{ github }}"
-        echo "github.event: ${{ github.event }}"
+        echo "${{ toJson(github) }}"
+        echo "github.event: ${{ toJson(github.event) }}"
         echo "github.ref: ${{ github.ref }}"
+        echo "github.ref_name: ${{ github.ref_name }}"
         echo "github.sha: ${{ github.sha }}"
